got the jumbotron working

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <title>ChoreSwap</title>
     <link href = "css/bootstrap.min.css" rel = "stylesheet" media = "screen" />
+    <link href = "css/mod.css" rel = "stylesheet" media = "screen" />
   </head>
   <body>
+    <div class = "jumbotron">
+      <div class = "callout"> 
+        <h1>Greeks: There's a better way to swap your chores.</h1>
+      </div>
+    </div>
+    <div class = "container">
+    </div>
     <!-- at the end of the doc so that html elements load faster -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
