added logo & ribbon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link href = "css/mod.css" rel = "stylesheet" media = "screen" />
   </head>
   <body>
+    <div class = "logo">
+      <div class = "ribbon">
+        <a href = "#">
+          <img src = "img/logo.png" width=80px height=80px />
+        </a>
+      </div>
+    </div>
     <div class = "jumbotron">
       <div class = "callout"> 
         <h1>Greeks: There's a better way to swap your chores.</h1>
