added button and overview text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ChoreSwap</title>
-    <link href = "css/bootstrap.min.css" rel = "stylesheet" media = "screen" />
+    <!--<link href = "css/bootstrap.min.css" rel = "stylesheet" media = "screen" />-->
     <link href = "css/mod.css" rel = "stylesheet" media = "screen" />
   </head>
   <body>
@@ -17,8 +17,15 @@
       <div class = "callout"> 
         <h1>Greeks: There's a better way to swap your chores.</h1>
       </div>
+      <a href = "#" class = "button white login">
+        <div class = "button login">Sign Up</div>
+      </a>
     </div>
     <div class = "container">
+      <div class = "explanation">
+        <p> ChoreSwap is a better way for Greeks to swap their chores. Simply log in with your chapter. When you need to swap a chore, create a request.</p>
+        <p>Created by four students at Carnegie Mellon University.</p>
+      </div>
     </div>
     <!-- at the end of the doc so that html elements load faster -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
