fixed button styling issues with spaces...oops

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class = "callout"> 
         <h1>Greeks: There's a better way to swap your chores.</h1>
       </div>
-      <a href = "#" class = "button white login">
-        <div class = "button login">Sign Up</div>
+      <a href = "#" >
+        <div class = "button white login">Sign Up</div>
       </a>
     </div>
     <div class = "container">
